<resources>
    <string name="app_name">Lightning Kiosk</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="business_requires">This business requires you to validate your identity via text which ensures another user can\'t key in your mobile number and review your data.</string>
</resources>