<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
        style="@style/keyboard_row"
        
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:showDividers="middle"
        android:layout_weight="1">

        <TextView
            android:id="@+id/t9_key_1"
            style="@style/keyboard_number_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_one" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner_main"></View>
        <TextView
            android:id="@+id/t9_key_2"
            style="@style/keyboard_number_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_two" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner_main"></View>

        <TextView
            android:id="@+id/t9_key_3"
            style="@style/keyboard_number_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_three" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_corner_main"></View>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_corner_main"></View>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_corner_main"></View>
    </LinearLayout>
    <LinearLayout
        style="@style/keyboard_row"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:showDividers="middle"
        
        android:layout_weight="1">

        <TextView
            android:id="@+id/t9_key_4"
            style="@style/keyboard_number_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_four" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner_main"></View>
        <TextView
            android:id="@+id/t9_key_5"
            style="@style/keyboard_number_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_five" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner_main"></View>

        <TextView
            android:id="@+id/t9_key_6"
            style="@style/keyboard_number_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_six" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_corner_main"></View>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_corner_main"></View>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_corner_main"></View>
    </LinearLayout>

    <LinearLayout
        style="@style/keyboard_row"
        
        android:layout_width="match_parent"
        android:showDividers="middle"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/t9_key_7"
            style="@style/keyboard_number_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_seven" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner_main"></View>
        <TextView
            android:id="@+id/t9_key_8"
            style="@style/keyboard_number_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_eight" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner_main"></View>
        <TextView
            android:id="@+id/t9_key_9"
            style="@style/keyboard_number_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_nine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_corner_main"></View>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_corner_main"></View>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_corner_main"></View>
    </LinearLayout>
    <LinearLayout
        style="@style/keyboard_row"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/t9_key_clear"
            style="@style/keyboard_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_clear"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="normal" />
        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner_main"></View>
        <TextView
            android:id="@+id/t9_key_0"
            style="@style/keyboard_number_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/number_zero" />
        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corner_main"></View>
        <TextView
            android:id="@+id/t9_key_backspace"
            style="@style/keyboard_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_backspace"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>

